--- a/style.css
+++ b/style.css
@@ -5,6 +5,27 @@ body {
     padding: 0;
 }
 
+/* Spinner Styles */
+.spinner {
+    border: 16px solid #f3f3f3;
+    border-top: 16px solid #3498db;
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 9999;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+
 header {
     padding: 10px 0;
 }
@@ -19,8 +40,15 @@ main {
 }
 
 .progress-bar-container {
-    display: block;
-    margin-top: 20px;
+    margin: 20px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.progress-bar {
+    width: 100%;
+    margin: 10px 0;
 }
 
 footer {
@@ -45,24 +73,4 @@ span {
 .btn-primary, .btn-secondary {
     width: 100%;
     margin-bottom: 10px;
-}
-
-/* Spinner Styles */
-.spinner {
-    border: 16px solid #f3f3f3;
-    border-top: 16px solid #3498db;
-    border-radius: 50%;
-    width: 120px;
-    height: 120px;
-    animation: spin 2s linear infinite;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 9999;
-}
-
-@keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
 }
